# Encryptic-Anti-Cheat

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  encryptic_config.json  encryptic_watermark.json  play_test_game.bat  setup.bat  test.bat
.github/workflows/: build.yml
core/: CMakeLists.txt
core/include/anticheat/: anti_bypass_guard.hpp  anticheat.hpp  c_api.h  config.hpp  debugger_guard.hpp  dll_guard.hpp  encryptic.hpp  handle_guard.hpp  hash_guard.hpp  heartbeat_guard.hpp  hook_guard.hpp  injection_guard.hpp  input_guard.hpp  integrity_guard.hpp  kernel_guard.hpp  memory_guard.hpp  module_whitelist.hpp  overlay_guard.hpp  pipe_guard.hpp  platform.hpp  process_guard.hpp  screenshot_guard.hpp  telemetry.hpp  thread_guard.hpp  threat_intel_guard.hpp  timing_guard.hpp  types.hpp  vm_guard.hpp  watchdog_guard.hpp  watermark.hpp
core/src/: config.cpp  config_loader.cpp  encryptic.cpp  platform.cpp
core/src/win32/: anti_bypass_guard_win32.cpp  debugger_guard_win32.cpp  dll_guard_win32.cpp  handle_guard_win32.cpp  hash_guard_win32.cpp  heartbeat_guard_win32.cpp  hook_guard_win32.cpp  injection_guard_win32.cpp  input_guard_win32.cpp  integrity_guard_win32.cpp  kernel_guard_win32.cpp  memory_guard_win32.cpp  module_whitelist_win32.cpp  overlay_guard_win32.cpp  pipe_guard_win32.cpp  platform_win32.cpp  process_guard_win32.cpp  screenshot_guard_win32.cpp  telemetry_win32.cpp  thread_guard_win32.cpp  threat_intel_guard_win32.cpp  timing_guard_win32.cpp  vm_guard_win32.cpp  watchdog_guard_win32.cpp  watermark_win32.cpp
docs/: anti-bypass.md  features.md  getting-started.md  kernel-driver.md  server-validation.md
driver/: EncrypticGuard.inf  EncrypticGuard.vcxproj
driver/src/: driver.c
engines/: README.md
engines/godot/: README.md
engines/godot/addons/encryptic_anticheat/: encryptic_anticheat.gd
engines/godot/addons/sentinel_anticheat/: sentinel_anticheat.gd
engines/godot/gdextension/: encryptic.gdextension
engines/native/: README.md
engines/roblox/: README.md
engines/roblox/ServerScriptService/Encryptic/: BanManager.lua  ExploitGuard.lua  FireRateGuard.lua  FlyGuard.lua  HitGuard.lua  HumanoidGuard.lua  MovementGuard.lua  NoclipGuard.lua  RemoteGuard.lua  TeleportGuard.lua  ToolGuard.lua  init.lua
engines/roblox/demo/: DEMO_SETUP.md  EncrypticDemo.rbxmx  build_studio_model.py
engines/roblox/demo/ServerScriptService/: DemoGame.server.lua
engines/roblox/demo/StarterPlayer/StarterPlayerScripts/: DemoClient.client.lua  ExploitTestGUI.client.lua
engines/unity-il2cpp/: README.md
engines/unity-il2cpp/Plugins/x86_64/: README.txt
engines/unity-il2cpp/Runtime/: EncrypticAntiCheat.cs
engines/unity-mono/: README.md
engines/unity-mono/Runtime/: EncrypticMonoAntiCheat.cs
engines/unreal-engine/: README.md
engines/unreal-engine/EncrypticAntiCheat/: EncrypticAntiCheat.uplugin
engines/unreal-engine/EncrypticAntiCheat/Source/EncrypticAntiCheat/: EncrypticAntiCheat.Build.cs
engines/unreal-engine/EncrypticAntiCheat/Source/EncrypticAntiCheat/Private/: EncrypticAntiCheatModule.cpp
engines/unreal-engine/EncrypticAntiCheat/Source/EncrypticAntiCheat/Public/: EncrypticAntiCheatModule.h
engines/unreal-engine/SentinelAntiCheat/: SentinelAntiCheat.uplugin
engines/unreal-engine/SentinelAntiCheat/Source/SentinelAntiCheat/: SentinelAntiCheat.Build.cs
engines/unreal-engine/SentinelAntiCheat/Source/SentinelAntiCheat/Private/: SentinelAntiCheatModule.cpp
engines/unreal-engine/SentinelAntiCheat/Source/SentinelAntiCheat/Public/: SentinelAntiCheatModule.h
examples/native/: CMakeLists.txt  main.cpp
examples/test_game/: CMakeLists.txt  encryptic_config.json  kick_dialog.cpp  kick_dialog.hpp  main.cpp
examples/test_game/evil_dll/: evil.cpp
examples/watermark_preview/: CMakeLists.txt  main.cpp
server/examples/node/: server.js
server/examples/python/: server.py
setup/: Encryptic-Setup.ps1  Install-KernelDriver.ps1
shared/: encryptic_kernel.h
